# vstlinkhost

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  build_windows.bat  setup_dependencies.bat  simple_setup.bat
.github/workflows/: build.yml
cmake/: FindVST3SDK.cmake
src/: main.cpp
src/core/audio/: AudioEngine.cpp  AudioEngine.h
src/core/midi/: MidiManager.cpp  MidiManager.h
src/core/plugin/: PluginManager.cpp  PluginManager.h
src/core/sync/: LinkManager.cpp  LinkManager.h  TransportManager.cpp  TransportManager.h
src/gui/components/: PluginComponent.h  PluginListComponent.cpp  PluginListComponent.h
src/gui/panels/: PluginsPanel.cpp  PluginsPanel.h  TransportPanel.cpp  TransportPanel.h
src/gui/views/: MainView.cpp  MainView.h
src/util/: AudioUtils.h  Config.h  FileUtils.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_main.cpp
tests/unit/: CMakeLists.txt  test_main.cpp
